--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,28 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+   # Dependências
+   /node_modules
+   /.pnp
+   .pnp.js
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+   # Testes
+   /coverage
 
-# testing
-/coverage
+   # Produção
+   /build
 
-# production
-/build
+   # Diversos
+   .DS_Store
+   .env.local
+   .env.development.local
+   .env.test.local
+   .env.production.local
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+   npm-debug.log*
+   yarn-debug.log*
+   yarn-error.log*
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+   # IDEs e editores
+   /.idea
+   .vscode
+   *.swp
+   *.swo
+node_modules
