--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "tsparticles": "^3.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
