--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "^0.30.2",
+    "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "tsparticles": "^3.7.1",
     "web-vitals": "^2.1.4"
